--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "dayjs": "^1.11.6",
+    "firebase": "^7.14.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.4.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
+    "react-toastify": "^6.2.0",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.13.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
