--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@firebase/firestore": "^3.8.0",
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.10.11",
@@ -18,7 +19,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "dayjs": "^1.11.6",
-    "firebase": "^7.14.5",
+    "firebase": "8.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.0",
