--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jogueirim",
-  "homepage": "https://projeto-psi.github.io/Jogueirim",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,6 +31,7 @@
     "redux-firestore": "^0.13.0",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.8.4",
+    "vercel": "^28.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
